<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ChiaraMail</string>
    <string name="beta_app_name">ChiaraMail Beta</string>
    <string name="shortcuts_title">ChiaraMail Accounts</string>
    <string name="unread_widget_label">ChiaraMail Unread</string>
    <string name="remote_control_label">ChiaraMail remote control</string>
    <string name="remote_control_desc">Allows this application to control ChiaraMail activities and settings.</string>
    <string name="app_authors">Google, The K-9 Dog Walkers and ChiaraMail Corp.</string>
    <string name="app_copyright_fmt">Portions Copyright 2012&#8211;2014 ChiaraMail Corp. Portions Copyright 2008&#8211;<xliff:g>%s</xliff:g> The K&#8211;9 Dog Walkers. Portions Copyright 2006&#8211;<xliff:g>%s</xliff:g> the Android Open Source Project.</string>
    <string name="app_license">Licensed under the Apache License, Version 2.0.</string>
    <string name="welcome_message_title">Welcome to ChiaraMail for Android</string>
    <string name="accounts_welcome">
<![CDATA[
<p>
Welcome to ChiaraMail for Android setup. ChiaraMail for Android (or, simply, ChiaraMail) is a mail program based on K-9 Mail, an open source mail client for Android originally based on the standard Android Mail client. Use of ChiaraMail is easy and intuitive, especially if you\'re familiar with K-9 Mail.
</p><p>
ChiaraMail\'s features include:
</p>
<ul>
  * Easy securing of message content from viewing by third parties without the use of encryption<br>
  * Ephemeral messaging with prevention of screen capture<br>
  * 100% protection against mail address spoofing<br>
  * More efficient delivery of mail to large distribution lists<br>
  * Enabling you to change your e-mail, including attachments, after it had been sent<br>
  * Prevent hacking of your email even if your email password has been compromised<br>
  * Send attachments of virtually unlimited size<br>
  * ... and more!<br>
<p>
The ChiaraMail mail client is a functional superset of K-9 Mail. This means it does everything that K-9 Mail 
does, plus more. The primary difference is the use of Envelope-Content Splitting (ECS) technology 
(see above for a list of some of the benefits of ECS over traditional mail technology). ChiaraMail also 
offers ECS implementations that enable your favorite mail clients, including Mozilla Thunderbird and 
Microsoft Outlook**, to use the technology. For more information about ECS, how it works and more of its 
benefits, see <a href="http://www.chiaramailcorp.com/about/works/">http://www.chiaramailcorp.com/about/works/</a>.
</p><p>
Please submit bug reports, suggestions for new features and questions to <a href="mailto:support@chiaramail.com">support@chiaramail.com</a>.
</p><p>
Enhancements and bug fixes in Version 4.53:
</p><p>
1. Fixed bug: Removed package name from references to MessageCompose.class in source code, in an effort to fix ActivityNotFoundException bug.

** Assumes all mail recipients are ECS-enabled (download additional implementations from <a href="http://www.chiaramailcorp.com/downloads/">http://www.chiaramailcorp.com/downloads</a>)
</p>]]>
    </string>
    <string name="default_signature">-- \nSent from my Android device with ChiaraMail.</string>
    <string name="account_delete_dlg_instructions_fmt">The account \"<xliff:g id="account">%s</xliff:g>\" will be removed from ChiaraMail.</string>
    <string name="account_recreate_dlg_instructions_fmt">All local data for \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="account_clear_dlg_instructions_fmt">Local copies of messages in \"<xliff:g id="account">%s</xliff:g>\" will be removed. Account settings will be retained.</string>
    <string name="insufficient_apg_permissions">ChiaraMail doesn\'t have permission to access APG fully, please reinstall ChiaraMail to fix that.</string>
    <string name="tag_line">E-mail Technology for the 21st Century</string>
    <string name="import_dialog_error_message">Please install a file manager to continue with this import.</string>
    <string name="open_market">Open Play Store</string>
    <string name="chiaramail_user">ChiaraMail for Android User</string>
    <string name="choose_contacts_to_invite">Choose Contacts to Invite</string>
    <string name="invite_contacts_title">Invite contacts</string>
    <string name="invite_contacts">Invite contacts</string>
    <string name="invite_contacts_preamble">Would you like to invite some of your contacts to download ChiaraMail for Android or another of ChiaraMail\'s Envelope-Content Splitting (ECS)-enabling products? Remember, in order for your recipients to be able to read messages you send using ECS, their mail programs must be enabled for ECS.\n\nTo send your contacts an invitation, press the menu button, followed by \"Invite contacts\", to bring up your contacts list. Select the people on the list you wish to send an e-mail invitation to, then press the \"Preview Invite\" button to preview the message before sending it.</string>
    <string name="doInvite">Yes!</string>
    <string name="skipInvite">No, thanks!</string>
    <string name="preview_invite">Preview Invite</string>
    <string name="ecs_video_viewer">ECS Video Viewer</string>
    <string name="message_compose_error_missing_content_server_name">Content server name missing from settings.</string>
    <string name="message_compose_error_missing_content_server_port">Content server port missing from settings.</string>
    <string name="message_error_unknown_content_server">Unknown content server name/port.</string>
    <string name="message_compose_error_bogus_content_server_port">Bad value for content server port: </string>
    <string name="message_compose_error_rangerr_content_server_port">Content server port out of range: </string>
    <string name="message_compose_error_missing_content_pointers">Content pointer(s) missing from settings.</string>
    <string name="message_compose_error_bogus_content_pointer">Bad value for content pointer: </string>
    <string name="message_compose_error_missing_content_server_password">Content server password missing from settings.</string>
    <string name="message_compose_dynamic_content_send_body_error">Error sending message body to content server: </string>
    <string name="message_compose_dynamic_content_send_attachment_error">Error sending message attachment to content server: </string>
    <string name="message_compose_dynamic_content_delete_error">Error deleting ECS-enabled content: </string>
    <string name="message_compose_attachment_too_big_1">Attachment </string>
    <string name="message_compose_attachment_too_big_2"> not included; must be less than 4 MB</string>
    <string name="message_compose_add_header_error">Error adding header field: </string>
    <string name="message_compose_encryption_error">Error encrypting content: </string>
    <string name="message_compose_canned_message">For your protection and privacy, this message was sent using ECS<sup>&#174;</sup> technology, but your mail client is not yet enabled for ECS. To read this secure message, please download the appropriate ECS extension for your mail client or one of our ECS-enabled mobile mail clients (http://www.chiaramailcorp.com/downloads/).</string>
    <string name="message_compose_default_error">Default content server not specified</string>
    <string name="message_compose_sender_name_address_mismatch">Address in sender name does not match sender e-mail address</string>
    <string name="user_registered_error">Unable to tell if user is registered with content server; continuing anyway</string>
    <string name="users_already_registered">Selected contacts are already registered with the content server</string>
    <string name="contacts_missing_addresses">Selected contacts have no e-mail addresses</string>
    <string name="message_invite_canned_subject">Write to me using ChiaraMail, the next-generation e-mail technology!</string>
    <string name="message_invite_canned_message">Hi,\n\nI don\'t want my e-mail provider (Google, Microsoft, Yahoo,&#8230;) reading my e-mail anymore, so I installed ChiaraMail support into my mail programs and I invite you to do the same. \n\nBesides protecting our privacy, the ChiaraMail products from ChiaraMail Corp. help guard against email spoofing, in which others try to trick us into revealing our bank login credentials and such. ChiaraMail also enables us to keep control of any e-mail we send, including letting us change or delete an e-mail after we\'ve sent it (Yes! Really!) and even make it disappear a few seconds after it\'s been read. \n\nAs if that weren\'t enough, ChiaraMail allows us to send attachments of practically unlimited size (imagine sending a video to some friends that only takes 291 bytes of space in their inboxes) and also speeds up mail delivery.\n\nI think this is a big deal and wanted to share the news about it with you. Get ChiaraMail today from http://www.chiaramailcorp.com/downloads and take control of your e-mail like I did!\n\nRegards,\n\n</string>
    <string name="message_view_status_DC_attachment_saved">Attachment saved to SD card as </string>
    <string name="message_view_status_DC_attachment_save_canceled">Attachment save canceled</string>
    <string name="message_view_status_DC_attachment_open_canceled">Attachment open canceled</string>
    <string name="message_view_status_DC_attachment_send_canceled">Attachment send canceled</string>
    <string name="account_setup_bypass_ecs">Bypass ECS</string>
    <string name="account_setup_ecs_password_hint">Content server password</string>
    <string name="account_setup_register_me">Create my account!</string>
    <string name="account_setup_content_server_password_label">Content server password</string>
    <string name="account_setup_dynamic_content_show_password">Show password</string>
    <string name="account_setup_content_server_password_summary">Check your e-mail for a registration confirmation message from ChiaraMail and select the link to activate registration and display your content server password. Then, enter the password in the above field.\n</string>
    <string name="account_setup_dynamic_content_default_label">Send as ECS</string>
    <string name="account_setup_dynamic_content_encryption_default_label">Encrypt content</string>
    <string name="account_setup_dynamic_content_include_content_default_label">Include content</string>
    <string name="account_setup_dynamic_content_allow_forwarding_default_label">Allow forwarding</string>
    <string name="account_setup_dynamic_content_ephemeral_mode_default_label">Self-destruct mode</string>
    <string name="account_setup_dynamic_content_ephemeral_mode_display_duration_label">Display duration</string>
    <string name="account_setup_content_server_name_label">Content server name</string>
    <string name="config_name_text">Configuration name</string>
    <string name="config_name_summary">Enter the configuration name</string>
    <string name="account_setup_content_server_name_summary">Specify the fully-qualified name or the IP address of the content server.</string>
    <string name="account_setup_content_server_port_label">Content server port</string>
    <string name="account_setup_content_server_port_summary">Specify the port number of the content server (default = 443).</string>
    <string name="reset_password_affirmative">Reset your content server password?</string>
    <string name="reset_password_yes_button">Yes</string>
    <string name="reset_password_no_button">No</string>
    <string name="next_action">Next</string>
    <string name="clear_checkmarks">Clear All</string>
    <string name="done_action">Done</string>
    <string name="account_setup_basics_instructions">Enter this account\'s email address:</string>
    <string name="account_setup_basics_email_hint">Email address</string>
</resources>