<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_height="fill_parent"
    android:layout_width="fill_parent">
 
   <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip"
    android:layout_marginBottom="54dip" 
    android:fadingEdge="none"
    android:scrollbarStyle="outsideInset">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/config_name_text"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />
        <EditText
            android:id="@+id/config_name"
            android:singleLine="true"
            android:inputType="text"
            android:enabled="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/config_name_summary" />
        <TextView
            android:text="@string/account_setup_content_server_name_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />
        <EditText
            android:id="@+id/content_server_name"
            android:singleLine="true"
            android:inputType="text"
            android:enabled="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/account_setup_content_server_name_summary" />
        <TextView
            android:text="@string/account_setup_content_server_password_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />
        <EditText
            android:id="@+id/content_server_password"
            android:singleLine="true"
            android:enabled="true"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/account_setup_content_server_password_summary" />
        <CheckBox
            android:id="@+id/show_password"
            android:checked="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setup_dynamic_content_show_password" />
<!--          <TextView
            android:id="@+id/content_server_password_summary"
            android:text="@string/account_setup_private_content_server_password_summary"
			android:autoLink="web"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" /> -->
        <TextView
            android:text="@string/account_setup_content_server_port_label"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />
        <EditText
            android:id="@+id/content_server_port"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="5"
            android:enabled="true"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:contentDescription="@string/account_setup_content_server_port_summary" />
        <CheckBox
            android:id="@+id/send_dynamic_content"
            android:checked="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setup_dynamic_content_default_label" />
        <CheckBox
            android:id="@+id/encrypt_content"
            android:checked="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/account_setup_dynamic_content_encryption_default_label" />
        <CheckBox
            android:id="@+id/include_content"
            android:checked="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/account_setup_dynamic_content_include_content_default_label" />      
        <CheckBox
            android:id="@+id/allow_forwarding"
            android:checked="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/account_setup_dynamic_content_allow_forwarding_default_label" />             
        <CheckBox
            android:id="@+id/ephemeral_mode"
            android:checked="false"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/account_setup_dynamic_content_ephemeral_mode_default_label" />      
 	    <Spinner
	        android:id="@+id/display_duration"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:enabled="false"
	        android:prompt="@string/account_setup_dynamic_content_ephemeral_mode_display_duration_label" />
<!--          <CheckBox
            android:id="@+id/filter_nonecs"
            android:checked="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setup_dynamic_content_filter_nonecs_default_label" />   -->   
        <View
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />
     </LinearLayout>
	</ScrollView>
</LinearLayout>
