<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="54dip" 
    android:padding="6dip"
    android:fadingEdge="none"
    android:scrollbarStyle="outsideInset">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
      <TextView
        android:text="@string/account_setup_basics_instructions"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="10dip"
        android:focusable="true"
        />
      <EditText
        android:id="@+id/account_ecs_email"
        android:hint="@string/account_setup_basics_email_hint"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        />
      <EditText
        android:id="@+id/account_ecs_password"
        android:inputType="textPassword"
        android:text=""
        android:hint="@string/account_setup_ecs_password_hint"
        android:password="true"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:nextFocusDown="@+id/next"
        />
 <!--    <TextView
        android:id="@+id/account_setup_no_account"
        android:text="@string/account_setup_no_account_text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="10dip"
        android:focusable="true"
        />     --> 
      <Button
        android:id="@+id/account_setup_register_me"
        android:text="@string/account_setup_register_me"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:enabled="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="10dip"
        android:focusable="true"
          />
      <CheckBox
        android:id="@+id/account_setup_bypass_ecs"
        android:checked="false"
        android:visibility="invisible"
        android:text="@string/account_setup_bypass_ecs"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        />  
      <View
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        />
    </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_marginTop="-45dip" 
        android:padding="0dip"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|right" 
        android:background="@android:drawable/bottom_bar"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <Button
            android:id="@+id/next"
            android:text="@string/next_action"
            android:minWidth="@dimen/button_minWidth"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/button_indicator_next"
            android:layout_marginBottom="-4dip" 
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false" 
            />
    </RelativeLayout>
</LinearLayout>